# GotifyNotification

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
devlog/: 2026-07-02.md
docs/: architecture.md  design-spec.md  development-guide.md  requirements.md  tech-spec.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  storage.rs  tray.rs  websocket.rs
src/components/MessageWindow/: AppFilter.tsx  MessageItem.tsx  MessageList.tsx  MessageWindow.tsx  Toolbar.tsx
src/components/SettingsWindow/: SettingsWindow.tsx
src/components/common/: TitleBar.tsx
src/hooks/: useTauriEvents.ts
src/i18n/: en-US.ts  index.ts  zh-CN.ts
src/store/: useAppStore.ts
src/styles/: index.css
src/types/: index.ts
src/utils/: format.ts
